# src/router/cartRouter.js
@@ -1,7 +1,7 @@
 import express from "express";
 import { isUserAuthorized } from "../middlewares/userAuthorization.js";
 import { bodyValidation } from "../middlewares/validations.js";
-import { newCartShema, removeCartItemSchema } from "../modules/cart/validations/cartValidation.js";
+import { newCartShema, removeCartItemSchema, removeAllProductFromCart } from "../modules/cart/validations/cartValidation.js";
 import { isProductExists} from "../middlewares/productsValidation.js";
 
  import { isProductAlreadyToCart, isProductExistsToCart } from "../middlewares/cartMiddlewares.js";
@@ -15,7 +15,7 @@ isUserAuthorized(["customer"]),
  bodyValidation(newCartShema), 
  isProductExists, 
  isProductAlreadyToCart, 
- cartController.addProductToCart
+ cartController.addProductsToCart
 );
 
 router.delete("/remove-product-from-cart",
@@ -25,5 +25,10 @@ router.delete("/remove-product-from-cart",
     cartController.removeProductFromCart
 );
 
+router.delete("/clear-cart",
+    isUserAuthorized(["customer"]),
+    bodyValidation(removeAllProductFromCart),
+    cartController.removeAllProductFromCart
+)
 
 export default router;
